force-app/main/default/objects/Current_Revenue__c/Current_Revenue__c.object-meta.xml
<CustomObject>
    <label>Current Revenue</label>
    <nameField>
        <displayFormat>SI-{000000}</displayFormat>
        <label>Sales Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Current Revenue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>