force-app/main/default/objects/Current_Revenue__c/fields/Bad_Debts_and_Write_offs__c.field-meta.xml
<CustomField>
    <fullName>Bad_Debts_and_Write_offs__c</fullName>
    <label>Bad Debts and Write-offs</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>