force-app/main/default/objects/Current_Revenue__c/fields/Cust_type_coeff__c.field-meta.xml
<CustomField>
    <fullName>Cust_type_coeff__c</fullName>
    <label>Cust type coeff.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>