force-app/main/default/objects/Current_Revenue__c/fields/Customer_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_Description__c</fullName>
    <label>Customer Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>