force-app/main/default/objects/Current_Revenue__c/fields/Filter_SHOW__c.field-meta.xml
<CustomField>
    <fullName>Filter_SHOW__c</fullName>
    <label>Filter SHOW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>