force-app/main/default/objects/Current_Revenue__c/fields/Office_coeff__c.field-meta.xml
<CustomField>
    <fullName>Office_coeff__c</fullName>
    <label>Office coeff.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>