force-app/main/default/objects/Current_Revenue__c/fields/Overall_coeff__c.field-meta.xml
<CustomField>
    <fullName>Overall_coeff__c</fullName>
    <label>Overall coeff.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>