force-app/main/default/objects/Current_Revenue__c/fields/Product_coeff__c.field-meta.xml
<CustomField>
    <fullName>Product_coeff__c</fullName>
    <label>Product coeff.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>