force-app/main/default/objects/Current_Revenue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad Debts</fullName>
            </value>
            <value>
                <fullName>Net Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>