force-app/main/default/objects/Current_Revenue__c/fields/X2016_Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X2016_Net_Revenue__c</fullName>
    <label>2016 Net Revenue</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>